# turret

./: README  config.txt  getPictureExample.cpp  makefile  simpletracker.cpp  tracker.cpp  videotest.cpp
etc/: control.cpp  control.h  showsurf.cpp  test.cpp  tracker.cpp  updateWindowTest.cpp  videosurf.cpp
src/: AbstractCameraControl.h  AbstractDetector.cpp  AbstractDetector.h  AbstractTracker.h  AlarmTriggerer.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Drawer.cpp  Drawer.h  FaceDetector.cpp  FaceDetector.h  FoscamCameraControl.cpp  FoscamCameraControl.h  HVTracker.cpp  HVTracker.h  HorizontalTracker.cpp  HorizontalTracker.h  MovingAlgorithm.cpp  MovingAlgorithm.h  ObjectSelector.cpp  ObjectSelector.h  OpenCVDetector.cpp  OpenCVDetector.h  README.INSTALL  SearchingAlgorithm.cpp  SearchingAlgorithm.h  SquareObjectSelector.cpp  SquareObjectSelector.h  compile  facedetector.cpp  facedetector.h  main.cpp  makefile  selectorExample.cpp  squareobjectselector.cpp  squareobjectselector.h  test.cpp  testPrecision.cpp  testPrecision.h  (+2 more)
